Fix where Facebook button on mobile was too wide

--- a/less/components/promo.less
+++ b/less/components/promo.less
@@ -26,6 +26,14 @@
     margin-bottom: @height-md;
   }
 
+  .btn {
+    @media (max-width: 475px) {
+      width: 100%;
+      padding-left: 10px;
+      padding: 6px 10px;;
+    }
+  }
+
   @media (max-width: @screen-sm-max) {
     text-align: center;
 
